# gyozapekin.github.io

./: CLAUDE.md  CNAME  DEV_NOTES.md  OPERATIONS.md  _config.yml  about.html  blog.html  contact.html  delete-spring-menu.bat  feed.xml  gallery.html  gyozalink.html  gyozalinkeng.html  hirakata-preview.html  hirakata.html  hirakataeng.html  howto.html  index.html  landing.html  menu.html  order.html  privacy.html  push.bat  robots.txt  sitemap.xml
_layouts/: post.html
_posts/: 2026-04-20-spring-menu.md  2026-04-23-welcome-to-our-news.md
css/: style.css
images/: 2024-10-06_09-17-52_691エビ餃子.heic
news/: index.html
pekintv-foodphoto-bot/: .env.example  .gitignore  README.md  pyproject.toml
pekintv-foodphoto-bot/.claude/skills/pekintv-foodphoto/: SKILL.md
pekintv-foodphoto-bot/.claude/skills/pekintv-foodphoto/references/: style_guide_ja.md
pekintv-foodphoto-bot/scripts/: install_task.ps1  process_one.py  run_watcher.pyw  usage_report.py
pekintv-foodphoto-bot/src/pekintv_bot/: __init__.py  config.py  draft_writer.py  gemini_client.py  image_ops.py  logging_setup.py  pipeline.py  prompts.py  watcher.py
pekintv-foodphoto-bot/tests/: conftest.py  test_caption_constraints.py  test_draft_writer.py  test_image_ops.py  test_pipeline_mock.py  test_prompts.py
shift/: admin.html  db.json  index.html  pekin_shift.html  staff.html
